--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    naming:
+      physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     application:
       name: ts-profile-engine-1676
